css/style.css
html, body{
    margin: 0;
    position: relative;
    background: #fff url(../img/bg.jpg) center;
}

.clear{
    display: block;
    clear: both;
}

.hide{
    display: none;
}

/*Container use to define the fix width of the container*/
.container{
    width: 1000px;
    margin: 0 auto 3rem;
    min-height: calc(100% - 89px);
}

.wrapper{
    padding: 6px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.company-name span{
    width: 70px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.home-breadcrumb{
    line-height: 38px !important;
}

.slider-wrapper{
    height: 300px;
}

.register-form-wrapper{
    width: 500px;
    margin: auto;
    min-height: calc(100vh - 406px);
}

.posting-wrapper{
    margin: auto;
}

.register-form-wrapper .item{
    flex: 1 1 50% !important;
    text-align: center !important;
}

.margin-top{
    margin-top: 20px !important;
}

.margin-top .right > .item:nth-child(1):before{
    background: transparent !important;
}

.post-btn{
    background-color: #89c4c1 !important;
}

.call-btn{
   margin-top: 2rem !important;
}

.form .field.full-width{
    width: 100%;
}

.listing-item{
    position: relative;
    transition-timing-function: ease-in-out;
    transition-duration: 400ms !important;
}

.listing-item:hover {
    transform: translateY(-1px);
    box-shadow: 0 6px 19px rgba(0,0,0,0.2) !important;
}

.listing-item .image {
    height: 150px;
    overflow: hidden;
}

.listing-item .image img{
    width: 100%;
    height: auto;
}

.listing-item .listing-link{
    position: absolute;
    font-size: 0;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 99;
}

.listing-item .like-count{
    z-index: 999;
    position: absolute;
    left: 10px;
}

.listing-item.item .like-count{
    left: initial;
    right: 0;
    top: 26px;
    margin: 0 !important;
}

.listing-item .like-count.disable{
    opacity: 0.5;
    pointer-events: none;
    cursor: not-allowed;
}

.pagination .disabled{
    pointer-events: none;
}

.footer{
    padding: 1rem 0 1rem 0;
    background-color: #3498db;
}

.footer p{
    text-align: center;
    color: #fff;
}

.slider-nav{
    width: 88px !important;
}

@media screen and (max-width: 720px) {
    .container{
        width: 100%;
    }
}

